# linebot

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.build.yml  docker-compose.local.yml  docker-compose.yml  request.http
docker/: Dockerfile
docker/redis/: redis.conf
migrations/2022-11-06-020219_create_emails/: down.sql  up.sql
migrations/2023-07-26-030339_create_permissions/: down.sql  up.sql
migrations/2023-09-05-071444_edit_permissions/: down.sql  up.sql
src/: config.rs  controller.rs  database_pool.rs  dto.rs  main.rs  middleware.rs  model.rs  service.rs  util.rs
src/config/: config_dev.rs  config_prod.rs
src/controller/: line_controller.rs  report_controller.rs
src/dto/: chat_process_dto.rs  line_action.rs  line_dto.rs  line_event.rs  line_flex_message.rs  line_message.rs  linebot_message.rs  linebot_process.rs  redis_dto.rs
src/middleware/: line_signature_guard.rs
src/model/: email.rs  permission.rs
src/schema/: email.rs  permission.rs
src/service/: chat_process_service.rs  email_service.rs  permission_service.rs
src/util/: chat_process.rs  chrome_bot.rs  line_bot.rs  line_signature.rs  redis.rs  schedule.rs
