[package]
name = "linebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.12", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.13.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
redis = { version = "0.22.1", features = ["tokio-comp"] }
diesel = { version = "2.0.2", features = ["mysql", "time", "r2d2"] }
r2d2 = "0.8.10"